--- a/leetcode/src/leetcode.vcxproj.filters
+++ b/leetcode/src/leetcode.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClInclude Include="0643_maximum_average_subarray_I.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="0633_sum_of_square_numbers.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="PreCompiled.cpp">
