--- a/leetcode/src/leetcode.vcxproj.filters
+++ b/leetcode/src/leetcode.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClInclude Include="0633_sum_of_square_numbers.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="0389_find_the_difference.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="PreCompiled.cpp">
