--- a/leetcode/src/leetcode.vcxproj.filters
+++ b/leetcode/src/leetcode.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClInclude Include="0168_excel_sheet_column_title.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="0374_guess_number_higher_or_lower.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="PreCompiled.cpp">
