--- a/leetcode/src/leetcode.vcxproj.filters
+++ b/leetcode/src/leetcode.vcxproj.filters
@@ -81,6 +81,9 @@
     <ClInclude Include="0374_guess_number_higher_or_lower.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="0375_guess_number_higer_or_lower.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="PreCompiled.cpp">
