--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "tarena"]
 	path = tarena
 	url = git@github.com:samsonwang/Study.git
+[submodule "linux/APUE_3e"]
+	path = linux/APUE_3e
+	url = git@github.com:samsonwang/APUE_3e.git
