--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "growth"]
 	path = growth
 	url = git@github.com:samsonwang/growth.git
+[submodule "network/UNP_3e"]
+	path = network/UNP_3e
+	url = git@github.com:samsonwang/UNP_3e.git
