--- a/leetcode/src/leetcode.vcxproj
+++ b/leetcode/src/leetcode.vcxproj
@@ -100,6 +100,7 @@
     <ClInclude Include="0375_guess_number_higer_or_lower.h" />
     <ClInclude Include="0383_ransom_note.h" />
     <ClInclude Include="0389_find_the_difference.h" />
+    <ClInclude Include="0414_third_maximum_number.h" />
     <ClInclude Include="0633_sum_of_square_numbers.h" />
     <ClInclude Include="0643_maximum_average_subarray_I.h" />
     <ClInclude Include="PreCompiled.h" />
