git submodule use https

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "tarena"]
 	path = tarena
-	url = git@github.com:samsonwang/Study.git
+	url = https://github.com/samsonwang/Study.git
 [submodule "linux/APUE_3e"]
 	path = linux/APUE_3e
-	url = git@github.com:samsonwang/APUE_3e.git
+	url = https://github.com/samsonwang/APUE_3e.git
 [submodule "network/UNP_3e"]
 	path = network/UNP_3e
-	url = git@github.com:samsonwang/UNP_3e.git
+	url = https://github.com/samsonwang/UNP_3e.git
